<resources>
    <string name="app_name">Market Bistro</string>
    <string name="button_order">Poruči</string>
    <string name="textView_pickFood">Izaberite hranu</string>
    <string name="checkBox_foodOne">Palačinke</string>
    <string name="checkBox_foodTwo">Sendvič</string>
    <string name="textView_pickDrink">Izaberite piće</string>
    <string name="checkBox_drinkOne">Kafa</string>
    <string name="checkBox_drinkTwo">Sok</string>
    <string name="textView_extraComment">Dodatni komentar</string>
    <string name="textView_deliveryType">Način isporuke</string>
    <string name="radioButton_deliveryTypeOne">Za poneti</string>
    <string name="radioButton_deliveryTypeTwo">Poslužiti u restoranu</string>
    <string name="label_overviewTitle">Ovo je vaša porudžbina</string>
    <string name="textView_prefixFood">Hrana: </string>
    <string name="textView_prefixDrink">Piće: </string>
    <string name="textView_prefixExtraComment">Dodatni komentar: </string>
    <string name="textView_prefixDelivery">Isporuka: </string>
    <string name="button_backToHome">Početna strana</string>
    <string name="textview_comment_hint">Unesite dodatni komentar</string>
    <string name="text_view_no_ordered_food">Niste poručili hranu</string>
    <string name="text_view_no_ordered_drink">Niste poručili piće</string>
    <string name="text_view_no_extra_comment">Niste zahtevali ništa dodatno</string>
    <string name="uri_restaurant_page">https://www.tripadvisor.rs/Restaurants-g294472-Belgrade.html</string>
</resources>
