<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/textViewOverviewTitle"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_layout"
        android:text="@string/label_overviewTitle"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_title" />

    <TextView
        android:id="@+id/textViewFoodOrder"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewOverviewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:text="@string/textView_prefixFood"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/textViewDrinkOrder"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewFoodOrder"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/textView_prefixDrink"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/textViewExtraComment"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDrinkOrder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/textView_prefixExtraComment"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/textViewDeliveryType"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewExtraComment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/textView_prefixDelivery"
        android:textSize="@dimen/text_size_normal" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewDeliveryType"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:text="@string/button_backToHome"
        android:textSize="14sp" />

</RelativeLayout>
</ScrollView>