<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:ignore="ContentDescription,Autofill"
    tools:context=".OverviewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/overviewLogo"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/restaurant_logo" />

        <TextView
            android:id="@+id/textViewOverviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/overviewLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/label_overviewTitle"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/textViewFoodOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOverviewTitle"
            android:layout_marginTop="@dimen/spacing_xxl"
            android:layout_marginStart="@dimen/spacing_xxl"
            android:layout_marginLeft="@dimen/spacing_xxl"
            android:layout_marginEnd="@dimen/spacing_xxl"
            android:layout_marginRight="@dimen/spacing_xxl"
            android:text="@string/textView_prefixFood"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/textViewDrinkOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFoodOrder"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_alignLeft="@id/textViewFoodOrder"
            android:layout_alignStart="@id/textViewFoodOrder"
            android:layout_marginEnd="@dimen/spacing_xxl"
            android:layout_marginRight="@dimen/spacing_xxl"
            android:text="@string/textView_prefixDrink"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/textViewExtraComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDrinkOrder"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_alignLeft="@id/textViewDrinkOrder"
            android:layout_alignStart="@id/textViewDrinkOrder"
            android:layout_marginEnd="@dimen/spacing_xxl"
            android:layout_marginRight="@dimen/spacing_xxl"
            android:text="@string/textView_prefixExtraComment"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/textViewDeliveryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewExtraComment"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_alignLeft="@id/textViewExtraComment"
            android:layout_alignStart="@id/textViewExtraComment"
            android:layout_marginEnd="@dimen/spacing_xxl"
            android:layout_marginRight="@dimen/spacing_xxl"
            android:text="@string/textView_prefixDelivery"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDeliveryType"
            android:layout_marginTop="@dimen/spacing_xxl"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/text_size_title"
            android:textStyle="bold"
            android:text="@string/button_backToHome"
            android:textSize="14sp" />

    </RelativeLayout>
</ScrollView>